--- a/src/css/quasar.variables.scss
+++ b/src/css/quasar.variables.scss
@@ -12,9 +12,9 @@
 // to match your app's branding.
 // Tip: Use the "Theme Builder" on Quasar's documentation website.
 
-$primary: #000000;
-$secondary: #424242;
-$accent: #9e9e9e;
+$primary: #4F46E5; // Modern Indigo
+$secondary: #818CF8;
+$accent: #6ee7b7;
 
 $dark: #000000;
 $dark-page: #121212;
